# ADLM-2025-Data-Challenge

Code/: .gitignore  app.py  check_docai.py  docai_markdown_full.py  embeddings.py  get_embedding_function.py  main.html  nuBackend.py  package-lock.json  populate_databse_from_markdown.py  procedures-to-markdown.py  query_data.py  server.py
Code/UI/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
Code/UI/src/: App.jsx
Running_RAGged/: README.md  pyproject.toml
Running_RAGged/QC/: QC_results.xlsx
Running_RAGged/embedding_utils/: app_streamlit_ui.py  backend.py  populate_database_from_markdown_batch.py  procedures-to-markdown.py
TEAM_NAME/: .gitignore  README.md  main.py  pyproject.toml
TEAM_NAME/embedding_utils/: FDA-sorting.py  FDA_REVIEW-Docs-to-markdown.py  Flatten_PDFs.py  OCR_test.py  QC-App.py  app_streamlit_ui.py  backend.py  docai_markdown_full.py  get_embedding_function.py  populate_database_from_markdown.py  populate_database_from_markdown_batch.py  procedures-to-markdown.py  query_data_dynamic_model.py  synthetic_procedures-to-markdown.py
